# iedr-data-platform

./: .gitignore  README.md  databricks.yml  pyproject.toml
.github/workflows/: cd-prod.yml  cd-test.yml  ci.yml
config/: der_type_mapping.yaml  schema_contracts.yaml  utility_registry.yaml
pipelines/: __init__.py
pipelines/bronze/: __init__.py  dlt_bronze_ingestion.py
pipelines/gold/: __init__.py  dlt_gold_dim_feeder.py  dlt_gold_dimensions.py  dlt_gold_fact_der.py
pipelines/platinum/: __init__.py  dlt_platinum_api_views.py  dlt_platinum_dq_report.py
pipelines/silver/: __init__.py  dlt_silver_circuits.py  dlt_silver_install_der.py  dlt_silver_planned_der.py
shared/: __init__.py  config_loader.py  transforms.py
tests/: __init__.py  validate_schemas.py
tests/integration/: __init__.py  test_dlt_pipeline.py
tests/unit/: __init__.py  conftest.py  test_config_loader.py  test_transforms.py
