[project]
name = "iedr-data-platform"
version = "1.0.0"
description = "IEDR DLT medallion architecture pipelines for NY Integrated Energy Data Resource"
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.4.0",
    "delta-spark>=2.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "chispa>=0.9.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["pipelines", "shared", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
